Fixed styling of weight/distance selector and input to look better on mobile. Added TODO to increase performance of loading workouts and sets.

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -242,18 +242,30 @@
 }
 
 @media screen and (min-width: 300px) and (max-width: 450px) {
+    .bootstrap-select.form-control:not([class*=col-]) {
+        width: 92px;
+    }
+    .bootstrap-select.btn-group .btn {
+        padding: 8px 12px 8px 18px;
+    }
+    .bootstrap-select.btn-group .btn .caret {
+        left: 7px;
+    }
     .modal {
         width: 90%;
         margin: auto;
     }
+/*     #option-one-input-container,
+    #option-two-input-container {
+        margin-left: 5px;
+    } */
     #title-container h1 {
         font-size: 29px;
     }
 }
 
 @media screen and (max-width: 767px) {
-    #exercise-name-input,
-    #weight-or-dist-input {
+    #exercise-name-input {
         margin: auto;
     }
     .modal-body label {
@@ -263,6 +275,7 @@
         max-width: 350px;
         margin: auto;
     }
+    #option-one-input-container .col-xs-8,
     #option-two-input-container .col-xs-8 {
         padding: 0;
     }
